--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 ---
 layout: default
 ---
+<iframe src="https://www.google.com/maps/d/embed?mid=1jUP1p3EaW13X_xGHVWQh3Gt6SuRccdk&ehbc=2E312F" width="640" height="480"></iframe>
