--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ---
-layout: default
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
 ---
-<iframe src="https://www.google.com/maps/d/embed?mid=1jUP1p3EaW13X_xGHVWQh3Gt6SuRccdk&ehbc=2E312F" width="640" height="480"></iframe>
